feat: Widget working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="next">Next</string>
     <string name="prev">Prev</string>
     <string name="no_network">No Network connection.</string>
+    <string name="appwidget_text">Recipe Shopping List</string>
+    <string name="extra_recipe">recipe_extra</string>
 </resources>
